--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,25 @@
-blinker==1.6.2
-click==8.1.3
+blinker==1.4
+click==7.1.2
 Flask==1.1.4
 Flask-Cors==3.0.10
-gunicorn==20.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-MarkupSafe==2.1.2
-nltk==3.8.1
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+joblib==1.0.1
+MarkupSafe==1.1.1
+nltk==3.5
 numpy==1.19.5
-pandas==1.3.4
-python-dateutil==2.8.2
-pytz==2023.3
-regex==2023.5.5
-scikit-learn==1.2.2
-scipy==1.10.1
-setuptools==65.5.0
-six==1.16.0
-threadpoolctl==3.1.0
-tqdm==4.65.0
-tzdata==2023.3
-Werkzeug==2.3.4
+pandas==1.2.4
+pip==21.0.1
+python-dateutil==2.8.1
+pytz==2021.1
+regex==2021.4.4
+scikit-learn==0.24.2
+scipy==1.6.3
+setuptools==54.1.2
+six==1.15.0
+threadpoolctl==2.1.0
+tqdm==4.59.0
+tzdata==2021.1
+Werkzeug==1.0.1
+
