--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-blinker==1.4
-click==7.1.2
-Flask==1.1.2
-Flask-Cors==3.0.10
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.3
-joblib==0.14.1
-MarkupSafe==1.1.1
-nltk==3.5
-numpy==1.18.5
-pandas==1.0.5
-pip==20.0.2
-python-dateutil==2.8.1
-pytz==2020.1
-regex==2020.6.8
-scikit-learn==0.23.1
-setuptools==41.2.0
-six==1.15.0
-threadpoolctl==2.1.0
-tqdm==4.47.0
-scipy==1.6.2
-tzdata==2021.1
-Werkzeug==1.0.1
+blinker
+click
+Flask
+Flask-Cors
+gunicorn
+itsdangerous
+Jinja2
+joblib
+MarkupSafe
+nltk
+numpy
+pandas
+pip
+python-dateutil
+pytz
+regex
+scikit-learn
+scipy
+setuptools
+six
+threadpoolctl
+tqdm
+tzdata
+Werkzeug
